# MIN_loss_calc

./: .gitignore  CMakeLists.txt  FODON_stage_switch_radix.cfg  parameter_setting_FODON.cfg  switch_fabric
Data/: 1024port_FODON_4_4_4_4_4.txt  1024port_FODON_LoopedCrossbar_4_4_4_4_4.txt  1024port_FODON_PILOSS_4_4_4_4_4.txt  1056port_FODON_PILOSS_8_11_12.txt  1080port_FODON_PILOSS_12_9_10.txt  1296port_FODON_PILOSS_12_9_12.txt  1372port_FODON_LoopedCrossbar_14_7_14.txt  1372port_FODON_PILOSS_14_7_14.txt  288port_FODON_4_3_4_6.csv  288port_FODON_4_3_4_6.txt  324port_FODON_PILOSS_6_9_6.csv  324port_FODON_PILOSS_6_9_6.txt  343port_FODON_LoopedCrossbar_7_7_7.csv  343port_FODON_LoopedCrossbar_7_7_7.txt  528port_FODON_PILOSS_8_11_6.csv  528port_FODON_PILOSS_8_11_6.txt
script/: plot_loss_distribution.py
src/: Baseline.cpp  Baseline.h  BasicElements.cpp  BasicElements.h  BasicMIN.cpp  BasicMIN.h  Butterfly.cpp  Butterfly.h  FODON.cpp  FODON.h  Main.cpp  Main.h  StageSwitch.cpp  StageSwitch.h
